...
        items.removeAll(where: { $0.id == item.id })
        updateSections()
        onDelete?(item.name, item.typeFood)
    }
    
    func titleForHeader(in section: Int) -> String {
        let titles = ["WANT TO BUY:", "BOUGHT:"]
        let isAddedItemExist = items.first { $0.isAddedToBasket } != nil
        
        return titles[section + (isAddedItemExist ? 0 : 1)]
    }
    
    func viewModelForItem(at indexPath: IndexPath) -> BasketCellViewModel {
...
