...
        
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            image: UIImage(systemName: "trash.circle"),
            style: .plain,
            target: self,
            action: #selector(deleteAllItems))
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "TrashBarButton"
    }
    
    private func configureEmptyView(_ isEmpty: Bool) {
        emptyView.frame = view.frame
        isEmpty ? view.addSubview(emptyView) : emptyView.removeFromSuperview()
        navigationController?.navigationBar.isHidden = isEmpty
...
    
    
    private func showAlertBeforeDeleting(handler: ((UIAlertAction) -> Void)?) {
        let title = "Do you want to remove the whole list?"
        let alert = UIAlertController(title: title, message: nil, preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: "Delete", style: .destructive, handler: handler))
        alert.addAction(UIAlertAction(title: "Cancel", style: .cancel))
        
        present(alert, animated: true)
    }
}

...
