...
        return navigationController?.viewControllers.first
    }
    
    private func drawBasketIcon() {
        let navigationController = tabBarController?.viewControllers?.last as? UINavigationController
        let basketImage = UIImage.basketIconImage(height: 30, color: .gray)
        navigationController?.tabBarItem = UITabBarItem(title: "Basket", image: basketImage, tag: 2)
    }
}

